univention-s4-connector (8.0.33-37) unstable; urgency=low

  * Skip the password synchronization if no password attribute has been
    changed (Bug #33621)

 -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Apr 2014 07:39:22 +0200

univention-s4-connector (8.0.33-36) unstable; urgency=low

  * The last change didn't check if an attribute was deleted. This has
    been fixed (Bug #33621)

 -- Stefan Gohmann <gohmann@univention.de>  Sat, 19 Apr 2014 08:16:05 +0200

univention-s4-connector (8.0.33-35) unstable; urgency=low

  * Check if the diff in UCS results to a change in S4, otherwise it is
    possible that a container should be renamed to the same name in S4
    which will be result in an LDB error (Bug #33621)

 -- Stefan Gohmann <gohmann@univention.de>  Fri, 18 Apr 2014 21:11:01 +0200

univention-s4-connector (8.0.33-34) unstable; urgency=low

  * Save the entryUUID of deleted objects in OpenLDAP to a local cache.
    This will prevent a recreation of deleted objects (Bug #32263)

 -- Stefan Gohmann <gohmann@univention.de>  Fri, 18 Apr 2014 20:32:43 +0200

univention-s4-connector (8.0.33-33) unstable; urgency=low

  * Prevent multiple S4 connector instances (Bug #34410)
  * The pcpatch user is no longer be ignored by default (Bug #34394)
  * Build only for Python 2.6 (Bug #31320)

 -- Stefan Gohmann <gohmann@univention.de>  Thu, 10 Apr 2014 10:08:52 +0200

univention-s4-connector (8.0.33-32) unstable; urgency=low

  * Remove the internal dn_list which has been used to detect mutli
    object changes. This is required for the switch from object based
    sync to diff based sync (Bug #33621)
  * Add diff mode for modifications from UCS to S4 (Bug #33621)
  * Add diff mode for modifications from S4 to UCS (Bug #33621)

 -- Stefan Gohmann <gohmann@univention.de>  Wed, 09 Apr 2014 10:59:02 +0200

univention-s4-connector (8.0.33-31) unstable; urgency=medium

  * WMI filter: Bump joinscript-version for upgrades from ucs_3.1-1 to