@@ -64,12 +64,27 @@ def make_lower(mlValue):
 	if type(mlValue) == type([]):
 		return [make_lower(x) for x in mlValue]
 	return mlValue
-									
+
+password_charsets = [
+	'abcdefghijklmnopqrstuvwxyz',
+	'ABCDEFGHIJKLMNOPQRSTUVWXYZ',
+	'0123456789',
+	'^!\$%&/()=?{[]}+~#-_.:,;<>|\\',
+	]
+
+def generate_strong_password(length=24):
+	pwd = []
+	charset = random.choice(password_charsets)
+	while len(pwd) < length:
+		pwd.append(random.choice(charset))
+		charset = random.choice(list(set(password_charsets) - set([charset])))
+	return "".join(pwd)
+
 def set_ucs_passwd_user(s4connector, key, ucs_object):
 	'''
 	set random password to fulfill required values
 	'''
-	ucs_object['password'] = str(int(random.random()*100000000))*8 # at least 8 characters
+	ucs_object['password'] = generate_strong_password()
 
 def check_ucs_lastname_user(s4connector, key, ucs_object):
 	'''
