@@ -2,8 +2,10 @@ univention-s4-connector (8.0.33-37) unstable; urgency=low
 
   * Skip the password synchronization if no password attribute has been
     changed (Bug #33621)
+  * Generate a strong password which fulfill the password complexity
+    settings (Bug #34478)
 
- -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Apr 2014 07:39:22 +0200
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Apr 2014 07:43:43 +0200
 
 univention-s4-connector (8.0.33-36) unstable; urgency=low
 
